--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "12345678",
   "main": "index.js",
   "scripts": {
-    "build": "webpack",
-    "start": "webpack serve"
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production",
+    "start": "webpack --config webpack.config.js --watch"
   },
   "keywords": [],
   "author": "",
