Add scripts on package.json file

--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "12345678",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack --mode development",
-    "build": "webpack --mode production",
-    "start": "webpack --config webpack.config.js --watch"
+    "test": "echo error",
+    "watch": "webpack --watch",
+    "start": "webpack serve --open",
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
